--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.1.9.RELEASE</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.github.fakemongo</groupId>
 			<artifactId>fongo</artifactId>
 			<version>1.5.8</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
